--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*  */
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
 *{
 	margin: 0;
 	padding: 0;
@@ -50,6 +43,7 @@ nav {
   width: 100%;
 }
 
+/* STICKY NAV */
 .main-nav {
    float: right;
    font-size: 0.8rem;
@@ -65,7 +59,7 @@ nav {
 .main-nav li a:visited {
    text-decoration: none;
    color: #fff;
-   padding-bottom: 10px;
+   padding-bottom: 20px;
    border-bottom: 1px solid transparent;
    transition: border-bottom 0.2s;
 }
@@ -77,6 +71,32 @@ nav {
 
 .home {
    color: #ff3f34;
+}
+
+/* STICKY */
+.sticky {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background: #ff3f34;
+	padding: 1rem 0;
+	z-index: 9999;
+}
+
+.sticky li a:link,
+.sticky li a:visited {
+	color: white;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+   padding-bottom: 25px;
+}
+
+.sticky .main-nav li a:hover,
+.sticky .main-nav li a:active {
+   border-bottom: 1px solid white;
 }
 
 /*------SOCIAL-LINKS------*/
@@ -97,7 +117,17 @@ nav {
 	color: #FFC107;
 }
 
+/* STICKY */
+.sticky .social-links a:link,
+.sticky .social-links a:visited {
+	color: white;
+	transition: color 0.2s;
+}
 
+.sticky .social-links a:hover,
+.sticky .social-links a:active {
+	color: #FFC107;
+}
 /*------COVER------*/
 .cover {
    background:  url('../img/cover2.jpg') center  no-repeat;
@@ -121,6 +151,10 @@ nav {
 
 .name {
 	color: #ff3f34;
+}
+
+.name2 {
+	color: #2d3436;
 }
 
 .phonetics {
